feat[putra]: create handler for user image
